--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- 顶部导航 -->
+  <!-- Navigation -->
   <header>
-    <div class="logo">ExtremeMind</div>
+    <div class="logo">
+      <img src="logo.png" alt="ExtremeMind Logo">
+      <span>ExtremeMind</span>
+    </div>
     <nav>
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
@@ -17,7 +20,7 @@
     </nav>
   </header>
 
-  <!-- 首页 Hero -->
+  <!-- Hero -->
   <section class="hero">
     <h1>Empowering innovation with intelligent solutions</h1>
     <p>We are a studio focused on developing smart solutions for the modern world.</p>
@@ -57,5 +60,8 @@
   <footer>
     <p>© 2025 ExtremeMind. All rights reserved.</p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
+
