--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Navigation -->
   <header>
     <div class="logo">
-      <img src="logo.png" alt="ExtremeMind Logo">
+      <img src="static/logo.png" alt="ExtremeMind Logo">
       <span>ExtremeMind</span>
     </div>
     <nav>
