feat: enhance website with improved layout and project showcase
- Add numbered section headers (1. About, 2. Projects, 3. Contact)
- Restructure projects into Featured Projects and Other Projects sections
- Add Python automation project with video demonstration
- Implement responsive design for navigation and layout
- Add technology tags for project stack
- Update project descriptions with detailed technical information

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Navigation -->
   <header>
     <div class="logo">
-      <img src="static/logo.png" alt="ExtremeMind Logo">
+      <img src="static/logo_revert.png" alt="ExtremeMind Logo">
       <span>ExtremeMind</span>
     </div>
     <nav>
@@ -22,37 +22,83 @@
 
   <!-- Hero -->
   <section class="hero">
-    <h1>Empowering innovation with intelligent solutions</h1>
-    <p>We are a studio focused on developing smart solutions for the modern world.</p>
+    <h1>ExtremeMind Studio</h1>
+    <h2>Empowering innovation by merging traditional technology with AI</h2>
   </section>
 
   <!-- About -->
   <section id="about">
-    <h2>About</h2>
+    <h2>1.  About</h2>
     <p>
-      ExtremeMind is a forward-thinking studio specializing in AI agents and WeChat Mini Program development.
-      We build intelligent systems that help businesses achieve more.
+        Founded in 2023, <strong>ExtremeMind</strong> is a forward‑thinking studio committed to merging traditional software development with cutting‑edge artificial intelligence.
+    </p>
+    <p>
+        We specialize in building <strong>AI agents</strong> seamlessly integrated into <strong>full‑stack applications</strong> and <strong>WeChat Mini Programs</strong>, enabling businesses to unlock new levels of efficiency and user engagement.
+    </p>
+    <p>
+        Beyond product development, we also craft <strong>Python automation scripts</strong> and explore other innovative solutions to help our clients streamline workflows and stay ahead in a rapidly evolving digital landscape.
     </p>
   </section>
 
   <!-- Projects -->
   <section id="projects">
-    <h2>Completed Projects</h2>
-    <div class="project-list">
-      <div class="project">
-        <h3>AI Chatbot for E-commerce</h3>
+    <h2>2. Projects</h2>
+    
+    <!-- Featured Projects -->
+    <div class="featured-projects">
+      <h3>Featured Projects</h3>
+      <div class="featured-project">
+        <h4>AI Chatbot for E-commerce</h4>
         <p>Custom AI chatbot integrated into a WeChat Mini Program, improving user engagement by 40%.</p>
       </div>
-      <div class="project">
-        <h3>Smart Task Automation</h3>
+      <div class="featured-project">
+        <h4>Smart Task Automation</h4>
         <p>Automated workflow system for internal team collaboration, reducing manual work by 60%.</p>
+      </div>
+      <div class="featured-project">
+        <h4>Python automation scripts</h4>
+        <video src="static/Python automation.mp4" controls class="project-video" poster="static/logo_revert.png">
+          Your browser does not support the video tag.
+        </video>
+        <p>
+            An intelligent automation solution that combines 
+            <strong>Android Studio’s mobile emulator</strong> with 
+            <strong>custom Python scripts</strong> to streamline high‑frequency purchasing tasks.
+          </p>
+          <p>
+            The bot <strong>monitors product availability in real time</strong> within a mobile shopping app 
+            and <strong>automatically completes the checkout process</strong> based on predefined conditions.
+          </p>
+          <p>
+            This project helps businesses and individuals <strong>save time, reduce manual effort, 
+            and improve efficiency</strong> in competitive purchasing scenarios.
+          </p>
+        <div class="tech-stack">
+          <span class="tech-tag">Python</span>
+          <span class="tech-tag">Android Studio</span>
+        </div>
+      </div>
+    </div>
+    
+    <!-- Other Projects -->
+    <div class="other-projects">
+      <h3>Other Projects</h3>
+      <div class="project-list">
+        <div class="project">
+          <h4>WeChat Mini Program Development</h4>
+          <p>Custom WeChat Mini Programs for various business needs.</p>
+        </div>
+        <div class="project">
+          <h4>Python Automation Scripts</h4>
+          <p>Automated data processing and workflow optimization scripts.</p>
+        </div>
       </div>
     </div>
   </section>
 
   <!-- Contact -->
   <section id="contact">
-    <h2>Contact</h2>
+    <h2>3. Contact us</h2>
     <p>Email: contact@extrememind.com</p>
     <p>LinkedIn: <a href="#">linkedin.com/extrememind</a></p>
   </section>
